--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "ajv-keywords": "^5.1.0",
     "antd": "^5.14.1",
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "crypto-js": "^4.2.0",
     "datatables.net": "^1.13.8",
     "html2canvas": "^1.4.1",
@@ -63,17 +65,17 @@
     "wow.js": "^1.2.2"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "start:staging": "env-cmd -f .env.staging react-scripts start",
-  "start:production": "env-cmd -f .env.production react-scripts start",
-  "build:staging": "env-cmd -f .env.staging react-scripts build",
-  "build:production": "env-cmd -f .env.production react-scripts build",
-  "test:staging": "env-cmd -f .env.staging react-scripts test",
-  "test:production": "env-cmd -f .env.production react-scripts test"
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "start:staging": "env-cmd -f .env.staging react-scripts start",
+    "start:production": "env-cmd -f .env.production react-scripts start",
+    "build:staging": "env-cmd -f .env.staging react-scripts build",
+    "build:production": "env-cmd -f .env.production react-scripts build",
+    "test:staging": "env-cmd -f .env.staging react-scripts test",
+    "test:production": "env-cmd -f .env.production react-scripts test"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
